<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="280dp"
    android:layout_height="280dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    tools:openDrawer="start"
    xmlns:android="http://schemas.android.com/apk/res/android">
    tools:openDrawer="start">


    <LinearLayout
        android:id="@+id/sft"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/save_data"
            android:textSize="20sp" />
    </LinearLayout>



    <RelativeLayout
        android:layout_below="@+id/sft"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sft2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:textColorHint="#BEBEBE"
            app:counterEnabled="true"
            app:counterMaxLength="8">

            <EditText
                android:id="@+id/et_save_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_title"
                android:maxLength="20"
                android:padding="10dp"
                android:singleLine="true"
               />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:background="@color/colorPrimary"
            android:text="@string/unit_save"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>