<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/setting_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_with_color_mask">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:gravity="center_vertical"
                android:text="@string/unit_setting"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#AAAAAA" />

        <LinearLayout
            android:id="@+id/save_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_with_color_mask">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:gravity="center_vertical"
                android:text="@string/unit_save"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#AAAAAA" />

        <LinearLayout
            android:id="@+id/clear_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_with_color_mask">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:gravity="center_vertical"
                android:text="@string/unit_clear"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
