<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main4Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/iv_setting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:src="@mipmap/back"
            android:textColor="@color/white" />
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:src="@drawable/sb_add"
            />
        <TextView
            android:id="@+id/tv_setting_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/main4_temp"
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_main_bluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="17dp"
                android:layout_marginTop="13dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/tv_main_battery"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/tv_main_bluetooth"
                android:layout_marginEnd="11dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/tv_channel_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/tv_main_bluetooth"
                android:layout_alignTop="@+id/textView4"
                android:text="@string/lowtemperaturealarmvalue"
                android:textColor="@color/balck" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_alignStart="@+id/tv_main_battery"
                android:layout_below="@+id/textView10"
                android:layout_marginTop="-70dp"
                android:text="@string/hightemperaturealarmvalue"
                android:textColor="@color/balck" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="97dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/ovalred_background"
                android:gravity="center"
                android:text="50 ℃" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView7"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="152dp"
                android:text="  0  ℃" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/tv_main_bluetooth"
                android:layout_marginBottom="4dp"
                android:background="@drawable/ovalblue_background"
                android:gravity="center"
                android:text="-10 ℃" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView7"
                android:layout_alignParentStart="true"
                android:layout_marginStart="132dp"
                android:text="@string/highesttemperature"
                android:textColor="@color/balck" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="70dp"
                android:text="TextView" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#18caff">

            <com.github.mikephil.charting.charts.LineChart
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

            </com.github.mikephil.charting.charts.LineChart>

        </RelativeLayout>

</LinearLayout>

</LinearLayout>