<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FileActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/iv_file_back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:padding="13dp"
            android:src="@drawable/setting_iv_back"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_file_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/history"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/tv_file_editor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:layout_marginRight="20dp"
            android:text="@string/edit"
            android:textColor="@color/white" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/lv_file"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </ListView>

        <LinearLayout
            android:id="@+id/file_bottom_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#e6e6e6"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:visibility="gone"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#e5e5e5"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="#ffffff">

                <TextView
                    android:id="@+id/tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="已选择"
                    android:textColor="#1A1A1A"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/tv_select_filenum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="9dp"
                    android:layout_toRightOf="@+id/tv"
                    android:text="0"
                    android:textColor="#1A1A1A"
                    android:textSize="14sp"/>

                <Button
                    android:id="@+id/btn_filedelete"
                    android:layout_width="80dp"
                    android:layout_height="33dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/button_noclickable_shape"
                    android:gravity="center"
                    android:text="删除"
                    android:textColor="#b7b8bd"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/select_fileall"
                    android:layout_width="80dp"
                    android:layout_height="33dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:layout_toLeftOf="@+id/btn_filedelete"
                    android:background="@drawable/bg_selete_all"
                    android:gravity="center"
                    android:text="@string/allselect"
                    android:textColor="#000001"
                    android:textSize="14sp"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
