<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@drawable/button_dialog_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/timedown_title"
            android:textColor="#38ADFF"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/bg_black"></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <com.example.benetech.bbq.view.EasyPickerView
                    android:id="@+id/epv_timedown_h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    custom:epvMaxShowNum="3"
                    custom:epvRecycleMode="true"
                    custom:epvTextColor="#4aa4a4"
                    custom:epvTextMaxScale="2.0"
                    custom:epvTextMinAlpha="0.35"
                    custom:epvTextPadding="10dp"
                    custom:epvTextSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="70dp"
                    android:text="h"
                    android:textColor="#4aa4a4"
                    android:textSize="20sp" />

                <com.example.benetech.bbq.view.EasyPickerView
                    android:id="@+id/epv_timedown_m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    custom:epvMaxShowNum="3"
                    custom:epvRecycleMode="false"
                    custom:epvTextColor="#e98d3c"
                    custom:epvTextMaxScale="2.0"
                    custom:epvTextMinAlpha="0.35"
                    custom:epvTextPadding="10dp"
                    custom:epvTextSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="70dp"
                    android:text="m"
                    android:textColor="#e98d3c"
                    android:textSize="20sp" />

            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="15dp"
            android:background="@color/bg_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/timedown_no"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/cancle"
                android:textColor="#7D7D7D"
                android:textSize="16sp" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#E4E4E4" />

            <Button
                android:id="@+id/timedown_yes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/confirm"
                android:textColor="#38ADFF"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
